welcome.lessons.welcome.bat.bool1.NearHundred.scala.error
nearHundred:1: error: Missing closing brace `}' assumed here
def nearHundred(n:Int): Boolean = {
^